--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -43,9 +43,9 @@ syntax enable
 set mouse-=a" > ~/.vimrc
 
   echo "#################################################"
-  echo "Installing packages required by GraalVM..."
+  echo "Installing packages required by Mandrel..."
   echo "#################################################"
-  apt-get install --no-install-recommends -y gcc libstdc++-10-dev libz-dev
+  apt-get install --no-install-recommends -y g++ zlib1g-dev libfreetype6-dev
 
   /mnt/shared/cmd/debian-cleanup.sh
 
@@ -89,26 +89,6 @@ RUN <<EOF
         --exclude=*/bin/jvisualvm \
         --exclude=*/lib/src.zip \
         --exclude=*/lib/visualvm
-
-  /opt/graalvm/bin/gu install native-image
-
-  strip --strip-unneeded \
-     /opt/graalvm/bin/unpack200 `# does not exist in Java 17`  \
-     /opt/graalvm/languages/js/bin/js \
-     /opt/graalvm/languages/llvm/bin/lli `# does not exist in dev` \
-     /opt/graalvm/languages/llvm/native/bin/graalvm-native-* `# does not exist in dev` \
-     /opt/graalvm/lib/installer/bin/gu `# does not exist in dev` \
-     /opt/graalvm/lib/svm/bin/native-image || true
-
-  if [[ $UPX_COMPRESS == "true" ]]; then
-     /opt/upx/upx -9 \
-        /opt/graalvm/languages/llvm/bin/lli \
-        /opt/graalvm/languages/llvm/native/bin/graalvm-native-* \
-        /opt/graalvm/lib/installer/bin/gu \
-        /opt/graalvm/lib/svm/bin/native-image || true
-        #/opt/graalvm/bin/unpack200 \
-        #/opt/graalvm/languages/js/bin/js \
-  fi
 
   export JAVA_VERSION=$(java -fullversion 2>&1 | sed -E -n 's/.* version "([^.-]*).*"/\1/p')
 
